# forgetting-controlled-pretraining

./: README.md  pyproject.toml  run_experiment.py
src/forgetting_control/: __init__.py  data.py  experiment.py  model.py  strategies.py
