[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forgetting-control-pretraining"
version = "0.1.0"
description = "Continual pretraining experiment with replay and EWC to control catastrophic forgetting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.0",
  "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
